0.27 

  Bugfix to the count_unrecognized_commands plugin so it works
  under PPerl (it wasn't resetting the count properly).

  reset_transaction is called after disconnect plugins are called so
  the Transaction objects DESTROY method is called. (Thanks to Robert
  James Kaes <rjkaes@flarenet.com>)

  Made the SpamAssassin plugin work with SA 2.6+ (thanks to numerous
  contributors, thanks everyone!). Note that for now it's not
  including the Spam: headers with the score explained. For that use
  the spamassassin_spamc plugin from http://projects.bluefeet.net/
  (for now).

  Added Postfix queue plugin thanks to Peter J Holzer!

  Took out the last "exit" call from the SMTP object; the "transport"
  module ("TcpServer", "SelectServer") needs to do the right thing in
  it's disconnect method.

  Update the SPF plugin (Philip Gladstone, philip@gladstonefamily.net):
   * Integrated with Mail::SPF::Query 1.991
   * Don't do SPF processing when you are acting as a relay system
   * Remove the MX changes as they are now inside Mail::SPF::Query

  Take out Data::Dumper to save a few bytes of memory

  Say Received: ... via ESMTP instead of via SMTP when the client
  speaks ESMTP.  (Hoping this can be a useful SpamAssassin rule).

  Take out the X-SMTPD header. 

  Add pod documentation and sanity checking of the config to
  check_badmailfrom

  Use $ENV{QMAIL} to override /var/qmail for where to find the
  control/ directory.

  Enable "check_earlytalker" in the default plugins config

  Added a milter plugin to allow use of sendmail milters

  Don't store the Qpsmtpd object in the Plugin object any more (this
  caused a circular reference)

  Added a new qpsmtpd-server - a select() based server for qpsmtpd

  Allow a config/relayclients and config/morerelayclients files to
  define who can relay (useful with the select() server)

  Fixed qpsmtpd unfolding all header lines

  Speed up persistent qpsmtpd's by checking for plugin functions after