@@ -1,5 +1,8 @@
 0.27 
 
+  reject bare carriage-returns in addition to the  bare line-feeds
+  (based on a patch from Robert James Kaes, thanks!)
+
   Bugfix to the count_unrecognized_commands plugin so it works
   under PPerl (it wasn't resetting the count properly).
 
